--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <style>
-        /* Add your CSS styles here */
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-        header { background: #333; color: white; padding: 10px 0; text-align: center; }
-        .hero { padding: 50px 0; text-align: center; background: #eee; }
-        .features, .about, .contact { padding: 20px; text-align: center; }
-        footer { background: #333; color: white; text-align: center; padding: 10px 0; }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
